<resources>
    <string name="app_name">Kore Assistant </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">“Contacts permissions are needed for providing email
        completions.”
    </string>
    <string name="need_login">You’d need to login to view the content</string>
    <string name="title_activity_ka_sign_up">Sign in</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_in_with_office_365">Sign in with Office 365</string>
    <string name="or">Or</string>
    <string name="continue_string">Continue</string>
    <string name="dont_have_account">Don\’t have an account?</string>
    <string name="email_address">Email address</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_ka_app_compat">KaAppCompatActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_ka_splash">KaSplashActivity</string>
    <string name="title_activity_ka_chatbox">KaChatboxActivity</string>
    <string name="title_activity_ka_add_information">Add Knowledge</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="tap_to_speak">Tap to speak</string>
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="typing_text">Kora is typing…</string>
    <string name="knowledge_info_text">Define the piece of knowledge you want to add below</string>
    <string name="label_name">Name</string>
    <string name="hashtags">Hashtags</string>
    <string name="label_knowledge">Knowledge</string>
    <string name="hashtags_hint">#Putsome #Tags #here</string>
    <string name="knowledge_hint">Type here,attach a file or both</string>
    <string name="attach_button">Attach</string>
    <string name="title_activity_ka_knowledge_form">KaKnowledgeFormActivity</string>
    <string name="team_mention_format">\@%s</string>
    <string name="kora">Kora</string>
    <string name="sub_header_destination">Choose one or more destinations to publish the knowledge ‘Marketing Headcount’</string>
    <string name="ml_sub_text">From the perspective of a user searching, provide 3 unique ways in which a person might query for this piece of knowledge?</string>
    <string name="primary_question">Primary Question</string>
    <string name="alternate_1">Alternate Question #1</string>
    <string name="alternate_2">Alternate Question #2</string>
    <string name="ml_info">* To help your colleges find this Knowledge item with a natural language search, a minimum of 3 statements is required. Machine Learning (ML) will process this and create many more possibilities. The more you add, the more accurately ML is able to match the users intent with your Knowledge Item.</string>
    <string name="give_this_a_short_name">Give this a short name</string>
    <string name="options_subtext">Review for accuracy, choose additional options and submit your piece of knowledge for approval.</string>
    <string name="additional_options">Additional Options</string>
    <string name="forgot_password_msg2">Link to reset your password is sent to your email address</string>
    <string name="define_information">Define Knowledge</string>
    <string name="tap_to_paste_from_your_clipboard">Tap to paste from your clipboard</string>
    <string name="title">Title</string>
    <string name="title_optional">Title (Optional)</string>
    <string name="add">Add</string>
    <string name="hash_format">#%s</string>
    <string name="invalid_url">invalid url</string>
    <string name="enter_title">Please Enter Title</string>
    <string name="create_knowledge">Creating Knowledge</string>
    <string name="knowledge_failed">Create Knowledge failed</string>
    <string name="component_id_text">TEXT_%d</string>
    <string name="insert_text"> Enter your text here</string>
    <string name="announce_hint">What do you want to announce?</string>
    <string name="was_this_helpful">Was this helpful?</string>
    <string name="go_to_link">Go to Link</string>
    <string name="view_details">View Details</string>
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="browse">Browse</string>
    <string name="fetching_data">Fetching Data</string>
    <string-array name="attachments_strings">
        <item>Take Photo</item>
        <item>Upload Photo</item>
        <item>Take Video</item>
        <item>Upload Video</item>
        <item>Attach Document</item>
    </string-array>
    <string-array name="profile_attachments_strings">
        <item>Take Photo</item>
        <item>Upload Photo</item>
    </string-array>
    <string-array name="universal_entities">
        <item>Sort by Recommended</item>
        <item>Sort by Modified Time</item>
    </string-array>
    <string name="title_activity_share_info_activity">Share with…</string>
    <string name="title_activity_teach_educate_activity">Train Kora</string>
    <string name="hint_text_basic">All are valid questions! Kora can help answer these common questions asked around the office, saving you  time and energy from having to keep answering them.</string>
    <string name="step_1_write_your_article">Step 1: Write your knowledge article</string>
    <string name="write_info_hint">Write your knowledge article the way you would want users to read it. Add links, images, video and more into your article to make it as detailed as needed.</string>
    <string name="teach_preview_title">Guest Wifi Password for Jan 2018</string>
    <string name="teach_preview_desc">The guest wifi password for January 2018 is abcd1234. Please do not share with anyone other than Guests of ACME Inc.</string>
    <string name="teach_questions">Step 2: Train Kora the right questions</string>
    <string name="train_article_info">From the perspective of someone looking for information in your article, train Kora a few ways in which people might ask for that information.</string>
    <string name="train_questions">“What is the guest wifi password?” \n “What is the wireless password for guests?” \n “How can I give internet access to a guest?” \n “How can a guest connect to the internet?”</string>
    <string name="sample_questions">“What is the guest wifi password?” \n “How do I setup the office printer?” \n “What is the travel policy?” \n “What is the status of Project X?”</string>
    <string name="select_audience">Step 3: Select your audience</string>
    <string name="select_audience_hint">Choose people or teams from your organisation with whom you want this article to be shared. From that point, when someone asks the right question, Kora will provide the article as the answer. </string>
    <string name="audience_question">“Hi Kora, Can you tell me what the guest wifi password is?”</string>
    <string name="sample_answer">The guest wifi password for January 2018 is abcd1234. Please do not share with anyone other than Guests of ACME Inc.</string>
    <string name="got_it">GOT IT</string>
    <string name="questions_hint_for_teach">From the perspective of a someone searching, provide 3 unique ways a person might ask for this knowledge?</string>
    <string name="trigger_questions">TRIGGER QUESTIONS</string>
    <string name="question_hint_text">Trigger Question #%d</string>
    <string name="questions_hint_footer">To help your co-workers find this knowledge with a simple question, at least 3 trigger questions are required. The more you add, the more accurately Kora will be able to match this knowledge.</string>
    <string name="next_text">NEXT</string>
    <string name="share_hint_top">Select the people, teams or company you want to share this knowledge article with</string>
    <string name="share_text">Share</string>
    <string name="teach_text">Train</string>
    <string name="say_something">Type something…</string>
    <string name="mute">Mute</string>
    <string name="un_mute">Un-Mute</string>
    <string name="notify_action_reply">Respond As Info</string>
    <string name="no_connection">No connection</string>
    <string name="connect_back">Connected back</string>
    <plurals name="up_vote_count">
        <item quantity="one"> 1 Vote </item>
        <item quantity="other"> %d  Votes</item>
    </plurals>
    <plurals name="follow_count">
        <item quantity="one"> &lt;b> 1 Person &lt;/b> is currently following this article </item>
        <item quantity="other">&lt;b> %d Persons &lt;/b> are currently following this article</item>
    </plurals>
    <plurals name="pending_count">
        <item quantity="one"> 1 Article</item>
        <item quantity="other">%d Articles</item>
    </plurals>
    <plurals name="approval_count">
        <item quantity="one"> 1 Pending Approval</item>
        <item quantity="other">%d Pending Approvals</item>
    </plurals>
    <string name="created_by_format">Created by %s </string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="no_comments">No Comments</string>
    <string name="share_view_hint_text">Share this article with your colleagues and teams. Also manage permissions on viewing and sharing this article.</string>
    <string name="shared_with">SHARED WITH</string>
    <string name="empty_shared_list">This article has not been shared with anyone yet</string>
    <string name="notify_people">Notify People</string>
    <string name="mute_article">If disabled, people will not receive a notification about this share, but will be able to find this article by searching or browsing for it.</string>
    <string name="train_hint">Train Kora to provide this article as an answer to a question. Provide 3 unique ways of asking a question to get this knowledge article as an answer</string>
    <string name="train_info_hint_bottom">To help your co-workers find this knowledge with a simple question, at least 3 trigger questions are required. The more you add, the more accurately Kora will be able to match this knowledge.</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="article_title_required">Article title is required</string>
    <string name="enter_title_desc">Title is required to post the article.</string>
    <string name="meeting_note_title_empty">Title is required</string>
    <string name="announcement_desc_empty">Title is required to make an announcement</string>
    <string name="article_is_empty">Article is empty</string>
    <string name="article_empty_desc">Description is required to post the article.</string>
    <string name="icon_e94d">&#xe94d;</string>
    <string name="icon_e95f">&#xe95f;</string>
    <string name="empty_panel_text">"Some features are turned off for you! \n  Please contact your administrator."</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
</resources>