<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customnamespace="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/notify"
        android:title="Notify"
        android:icon="@drawable/ic_notification"
        customnamespace:showAsAction="always"/>
-->


    <item
        android:id="@+id/done"
        android:title="@string/done"
        android:visible="true"
        customnamespace:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_icon_share_grey"
        android:title="@string/share"
        android:visible="false"
        customnamespace:showAsAction="always" />
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:visible="false"
        customnamespace:showAsAction="always" />


</menu>